--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,12 @@
     update_cache=yes
     cache_valid_time=3600
 
+- name: add shares group
+  become: true
+  group:
+    name=shares
+    state=present
+
 - name: add user for downloads
   become: true
   user:
