--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -110,4 +110,4 @@
 
 - name: install ydl
   include: ydl.yml
-  when: ansible_distribution == 'Debian' or ansible_lsb.major_release|int < 13
+  when: ansible_distribution == 'Debian' or ansible_lsb.major_release|int > 13
